--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,14 @@
 {
   "name": "PCF Debuggergator",
   "description": "Step through your HTTP requests like a debugger to see what is happening in your PCF app",
-  "version": "0.2",
+  "version": "0.3",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
   "browser_action": {
-    "default_title": "Made to work with Spring"
+    "default_title": "Made to work with Spring",
+    "default_popup": "popup.html"
   },
   "manifest_version": 2
 }
